fix: path media

--- a/src/less/blocks/clients.less
+++ b/src/less/blocks/clients.less
@@ -12,7 +12,7 @@
     left: 0;
     right: -16px;
     height: 42px;
-    background-image: url('/img/underline.png');
+    background-image: url('img/underline.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 0 50%;
