fix: current edits

--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -9,6 +9,13 @@
   @media (max-width: @breakpoint-md - 1px) {
     padding-bottom: 32px;
   }
+
+  @media (min-width: @breakpoint-xl) {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
 }
 
 .footer__wrap {
