--- a/src/less/blocks/services.less
+++ b/src/less/blocks/services.less
@@ -53,14 +53,22 @@
   }
 }
 
-.services__image {
-  svg {
-    max-width: 100%;
-    position: absolute;
-  }
-
+.services__images {
   @media (max-width: @breakpoint-xl - 1px) {
     display: none;
+  }
+}
+
+.services__image {
+  max-width: 100%;
+  position: absolute;
+  opacity: 0;
+  transition-duration: 0.35s;
+  transition-timing-function: ease-out;
+  transition-property: opacity;
+
+  &--active {
+    opacity: 1;
   }
 }
 
