--- a/src/less/main.less
+++ b/src/less/main.less
@@ -11,6 +11,8 @@
 
 @import 'blocks/scene';
 @import 'blocks/grid';
+@import 'blocks/page';
+@import 'blocks/main';
 @import 'blocks/header';
 @import 'blocks/gradient-title';
 @import 'blocks/showreel';
