--- a/src/less/main.less
+++ b/src/less/main.less
@@ -3,6 +3,7 @@
 
 @import 'general/fonts';
 @import 'general/variables';
+@import 'general/mixins';
 @import 'general/styles';
 @import 'general/helpers';
 
@@ -32,3 +33,5 @@
 @import 'blocks/project-full-picture';
 @import 'blocks/project-text';
 @import 'blocks/next-project';
+@import 'blocks/more-projects';
+@import 'blocks/portfolio-promo';
