--- a/src/less/blocks/main.less
+++ b/src/less/blocks/main.less
@@ -3,6 +3,7 @@
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
+  margin-top: ~"calc(var(--header-height) * -1)";
 
   @media (min-width: @breakpoint-xl) {
     margin-bottom: 735px;
