--- a/src/less/blocks/gradient-title.less
+++ b/src/less/blocks/gradient-title.less
@@ -1,11 +1,11 @@
 .gradient-title {
   padding-bottom: 0;
   background-color: #fff;
-  padding-top: ~"calc(var(--header-height) + 48px)";
+  padding-top: ~"calc(var(--header-height) + var(--element-gap-vertical, @{element-gap-vertical}))";
 
-  @media (min-width: @breakpoint-xl) {
-    padding-top: ~"calc(var(--header-height) + var(--block-gap-vertical))";
-  }
+  // @media (min-width: @breakpoint-xl) {
+  //   padding-top: ~"calc(var(--header-height) + var(--block-gap-vertical))";
+  // }
 }
 
 .gradient-title__text {
