fix: current edits

--- a/src/less/blocks/clients.less
+++ b/src/less/blocks/clients.less
@@ -25,7 +25,6 @@
 
 .clients__slider {
   padding-bottom: 72px;
-  // margin-bottom: 72px;
 }
 
 .clients__slide {
@@ -40,6 +39,7 @@
   text-align: right;
   font-size: 0.75rem;
   color: #98A5B1;
+  font-family: @text-font-family-secondary;
 }
 
 .clients__scrollbar {
