--- a/src/less/blocks/grid-works.less
+++ b/src/less/blocks/grid-works.less
@@ -26,11 +26,22 @@
   }
 }
 
+.grid-works__nav {
+  overflow: hidden;
+  clip-path: inset(0 0 19px 0);
+  margin-bottom: -20px;
+}
+
 .grid-works__tag {
   display: flex;
-  flex-wrap: wrap;
   margin-right: -8px;
-  margin-bottom: -8px;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  padding-bottom: 20px;
+
+  label {
+    display: flex;
+  }
 
   input {
     .visually-hidden;
@@ -42,9 +53,15 @@
   }
 
   li {
-    margin-right: 8px;
-    margin-bottom: 8px;
+    white-space: nowrap;
 
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
+
+    &:last-child {
+      padding-right: 8px;
+    }
 
     &:hover {
       color: @body-color;
@@ -56,6 +73,10 @@
 .grid-works__frame {
   border: 1px solid #98A5B1;
   padding: 8px 22px;
+  padding-top: 8px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  padding-right: 22px;
   border-radius: 34px;
   color: #98A5B1;
   font-size: 1.125rem;
@@ -65,4 +86,8 @@
   transition-duration: 0.3s;
   transition-timing-function: ease-out;
   transition-property: color, border-color;
+
+  span {
+    margin-left: 4px;
+  }
 }
