--- a/src/less/blocks/more-projects.less
+++ b/src/less/blocks/more-projects.less
@@ -112,6 +112,7 @@
   &--head {
     text-transform: uppercase;
     color: #98A5B1;
+    font-family: @text-font-family-secondary;
     letter-spacing: 1px;
     font-size: 0.875rem;
     line-height: 1rem;
