--- a/src/less/general/variables.less
+++ b/src/less/general/variables.less
@@ -1,5 +1,7 @@
 @text-font-family: 'TT Commons', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
+@text-font-family-secondary: "Roboto Mono", @text-font-family;
+
 @body-color: #131315;
 @body-background-color: #fff;
 
@@ -11,10 +13,11 @@
 @element-gap-vertical: 24px;
 
 @block-gap-horizontal: 16px;
-@block-gap-vertical: 48px;
+@block-gap-vertical: 80px;
 
 @breakpoint-sm: 576px;
 @breakpoint-md: 768px;
 @breakpoint-lg: 992px;
 @breakpoint-xl: 1200px;
 @breakpoint-xxl: 1920px;
+@breakpoint-xxxl: 2560px;
