--- a/src/less/blocks/about.less
+++ b/src/less/blocks/about.less
@@ -38,18 +38,18 @@
       transition-property: background-color;
     }
 
-    &:hover {
-      color: #98A5B1;
-
-      &::before {
-        background-color: #98A5B1;
-      }
+    &:hover + .icon {
+      opacity: 1;
     }
   }
 
   .icon {
+    opacity: 0;
     vertical-align: baseline;
     margin-left: 0.4em;
+    transition-duration: 0.35s;
+    transition-timing-function: ease-out;
+    transition-property: opacity;
   }
 
   svg {
