--- a/src/less/blocks/cources.less
+++ b/src/less/blocks/cources.less
@@ -27,6 +27,8 @@
 }
 
 .cources__title {
+  white-space: nowrap;
+
   a {
     color: @body-color;
     position: relative;
@@ -44,12 +46,24 @@
       transition-property: background-color;
     }
 
-    &:hover {
-      color: #98A5B1;
+    &:hover + .icon {
+      opacity: 1;
+    }
+  }
 
-      &::before {
-        background-color: #98A5B1;
-      }
+  .icon {
+    opacity: 0;
+    vertical-align: baseline;
+    margin-left: 0.4em;
+    transition-duration: 0.35s;
+    transition-timing-function: ease-out;
+    transition-property: opacity;
+  }
+
+  svg {
+    @media (max-width: @breakpoint-md - 1px) {
+      width: 16px;
+      height: 16px;
     }
   }
 }
