--- a/src/less/blocks/favorite-clients.less
+++ b/src/less/blocks/favorite-clients.less
@@ -8,11 +8,12 @@
   border-top: 1px solid #98A5B1;
   display: flex;
   justify-content: space-between;
-  font-size: 0.875rem;
-  line-height: 1rem;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
   letter-spacing: 1px;
   text-transform: uppercase;
   color: #98A5B1;
+  font-family: @text-font-family-secondary;
   padding-top: 16px;
 }
 
@@ -42,21 +43,20 @@
       position: absolute;
       top: 0;
       left: 0;
-      // z-index: -1;
     }
   }
 }
 
 .out {
   animation-name: out;
-  animation-duration: 0.2s;
+  animation-duration: 0.5s;
   animation-timing-function: cubic-bezier(0.550, 0.085, 0.680, 0.530);
   animation-fill-mode: both
 }
 
 .in {
   animation-name: in;
-  animation-duration: 0.5s;
+  animation-duration: 0.7s;
   animation-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940);
   animation-fill-mode: both;
 }
