--- a/src/less/blocks/services.less
+++ b/src/less/blocks/services.less
@@ -22,6 +22,8 @@
 }
 
 .services__title {
+  white-space: nowrap;
+
   a {
     color: #fff;
     position: relative;
@@ -39,12 +41,24 @@
       transition-property: background-color;
     }
 
-    &:hover {
-      color: #98A5B1;
+    &:hover + .icon {
+      opacity: 1;
+    }
+  }
 
-      &::before {
-        background-color: #98A5B1;
-      }
+  .icon {
+    opacity: 0;
+    vertical-align: baseline;
+    margin-left: 0.4em;
+    transition-duration: 0.35s;
+    transition-timing-function: ease-out;
+    transition-property: opacity;
+  }
+
+  svg {
+    @media (max-width: @breakpoint-md - 1px) {
+      width: 16px;
+      height: 16px;
     }
   }
 
@@ -190,6 +204,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #98A5B1;
+    font-family: @text-font-family-secondary;
   }
 }
 
