--- a/src/less/blocks/work-card.less
+++ b/src/less/blocks/work-card.less
@@ -9,7 +9,7 @@
   border-radius: 24px 24px 24px 0px;
   margin-bottom: 24px;
 
-  @media (min-width: @breakpoint-lg) {
+  @media (min-width: @breakpoint-xl) {
     height: 530px;
   }
 }
@@ -51,6 +51,13 @@
 
   a {
     color: @body-color;
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition-duration: 0.35s;
+    transition-timing-function: ease-out;
+    transition-property: background-size;
 
     &::before {
       content: '';
@@ -62,7 +69,7 @@
     }
 
     &:hover {
-      color: #98A5B1;
+      background-size: 100% 2px;
     }
   }
 }
@@ -74,6 +81,7 @@
 
   li {
     color: #98A5B1;
+    font-family: @text-font-family-secondary;
     letter-spacing: 1px;
     font-size: 0.875rem;
     line-height: 1rem;
