--- a/src/less/blocks/works.less
+++ b/src/less/blocks/works.less
@@ -27,12 +27,24 @@
       transition-property: background-color;
     }
 
-    &:hover {
-      color: #98A5B1;
+    &:hover + .icon {
+      opacity: 1;
+    }
+  }
 
-      &::before {
-        background-color: #98A5B1;
-      }
+  .icon {
+    opacity: 0;
+    vertical-align: baseline;
+    margin-left: 0.4em;
+    transition-duration: 0.35s;
+    transition-timing-function: ease-out;
+    transition-property: opacity;
+  }
+
+  svg {
+    @media (max-width: @breakpoint-md - 1px) {
+      width: 16px;
+      height: 16px;
     }
   }
 
@@ -41,31 +53,69 @@
   }
 }
 
+.works__nav {
+  overflow: hidden;
+  clip-path: inset(0 0 20px 0);
+  margin-bottom: -20px;
+}
+
 .works__tag {
   display: flex;
-  flex-wrap: wrap;
   margin-right: -8px;
-  margin-bottom: -8px;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  padding-bottom: 20px;
+
+  label {
+    display: flex;
+  }
+
+  input {
+    .visually-hidden;
+  }
+
+  input:checked + span {
+    border-color: #1B64FA;
+    color: #1B64FA;
+  }
 
   li {
-    margin-right: 8px;
-    margin-bottom: 8px;
-    border: 1px solid #98A5B1;
-    padding: 8px 22px;
-    border-radius: 34px;
-    color: #98A5B1;
-    font-size: 1.125rem;
-    line-height: 1.175rem;
-    font-weight: 500;
-    cursor: pointer;
-    transition-duration: 0.3s;
-    transition-timing-function: ease-out;
-    transition-property: color, border-color;
+    white-space: nowrap;
+
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
+
+    &:last-child {
+      padding-right: 8px;
+    }
 
     &:hover {
       color: @body-color;
       border-color: @body-color;
     }
+  }
+}
+
+.works__frame {
+  border: 1px solid #98A5B1;
+  padding: 8px 22px;
+  padding-top: 8px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  padding-right: 22px;
+  border-radius: 34px;
+  color: #98A5B1;
+  font-size: 1.125rem;
+  line-height: 1.175rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-out;
+  transition-property: color, border-color;
+
+  span {
+    margin-left: 6px;
   }
 }
 
@@ -79,66 +129,4 @@
       width: 66.66%;
     }
   }
-}
-
-.card-work__accent {
-  height: 330px;
-  position: relative;
-  overflow: hidden;
-  border-radius: 24px 24px 24px 0px;
-  margin-bottom: 24px;
-
-  @media (min-width: @breakpoint-lg) {
-    height: 530px;
-  }
-}
-
-.card-work__image {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    transition-duration: 0.35s;
-    transition-timing-function: ease-out;
-    transition-property: transform;
-
-    .card-work:hover & {
-      transform: scale(1.1);
-    }
-  }
-}
-
-.card-work__title {
-  margin-bottom: 8px;
-
-  h3 {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-}
-
-.card-work__tags {
-  ul {
-    display: flex;
-  }
-
-  li {
-    color: #98A5B1;
-    letter-spacing: 1px;
-    font-size: 0.875rem;
-    line-height: 1rem;
-    text-transform: uppercase;
-  }
-}
-
-.card-work__divider {
-  padding-right: 8px;
-  padding-left: 8px;
 }
