--- a/src/less/general/fonts.less
+++ b/src/less/general/fonts.less
@@ -18,3 +18,10 @@
 	font-weight: 100;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: "Roboto Mono";
+	src: url("fonts/RobotoMono-Regular.ttf") format("truetype");
+	font-weight: 400;
+	font-style: normal;
+}
