--- a/src/less/general/styles.less
+++ b/src/less/general/styles.less
@@ -19,6 +19,11 @@ html {
   box-sizing: inherit;
 }
 
+::selection {
+  color: #FFF;
+  background: #1b64fa;
+}
+
 body {
   font-family: @text-font-family;
   font-size: 2.5rem;
