--- a/src/less/blocks/more-projects.less
+++ b/src/less/blocks/more-projects.less
@@ -27,7 +27,7 @@
     font-size: 2.75rem;
     line-height: 2.75rem;
 
-    @media (min-width: @breakpoint-md) {
+    @media (min-width: @breakpoint-xl) {
       font-size: 3.75rem;
       line-height: 4.5rem;
     }
@@ -38,7 +38,7 @@
   font-size: 1.625rem;
   line-height: 2rem;
 
-  @media (min-width: @breakpoint-md) {
+  @media (min-width: @breakpoint-xl) {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
@@ -70,7 +70,7 @@
   font-size: 1.375rem;
   line-height: 1.5rem;
 
-  @media (min-width: @breakpoint-md) {
+  @media (min-width: @breakpoint-xl) {
     font-size: 1.75rem;
     line-height: 2rem;
   }
@@ -131,12 +131,19 @@
 
   &--expertise {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+
+    @media (max-width: @breakpoint-md - 1px) {
+      flex-direction: column;
+    }
   }
 
   .icon {
-    @media (max-width: @breakpoint-md - 1px) {
+    flex-shrink: 0;
+
+    @media (max-width: @breakpoint-xl - 1px) {
+      align-self: flex-start;
+
       svg {
         width: 16px;
         height: 16px;
