--- a/src/less/blocks/portfolio-promo.less
+++ b/src/less/blocks/portfolio-promo.less
@@ -7,6 +7,7 @@
   padding-left: var(--block-gap-horizontal, @block-gap-horizontal);
   padding-bottom: 64px;
   background-color: #000;
+  overflow: hidden;
 
   @media (min-width: @breakpoint-xl) {
     height: 60vh;
