--- a/src/less/blocks/showreel.less
+++ b/src/less/blocks/showreel.less
@@ -16,6 +16,41 @@
   width: 100%;
   height: 100%;
 
+  .vjs-big-play-button {
+    width: 96px;
+    height: 96px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    background-color: #fff;
+    align-items: center;
+
+    .vjs-icon-placeholder {
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: relative;
+
+      &::before {
+        content: 'play';
+        font-size: 1.375rem;
+        line-height: 1.625rem;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-family: @text-font-family;
+        color: @body-color;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        display: block;
+        width: auto;
+        height: auto;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+
   .vjs-poster {
     background-size: cover;
     cursor: none;
