--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -24,9 +24,18 @@
 }
 
 .header__fold {
+  padding: 40px 16px;
+
+  @media (min-width: @breakpoint-md) {
+    padding: 40px 24px;
+  }
+
+  @media (min-width: @breakpoint-xl) {
+    padding: 0;
+  }
+
   @media (max-width: @breakpoint-xl - 1px) {
     background-color: #fff;
-    padding: 40px 16px;
     width: 100%;
     z-index: 1;
 
