--- a/src/less/blocks/more-projects.less
+++ b/src/less/blocks/more-projects.less
@@ -12,14 +12,14 @@
   }
 
   &--text {
-    @media (min-width: @breakpoint-xl) {
+    @media (min-width: @breakpoint-lg) {
       justify-content: space-between;
     }
   }
 }
 
 .more-projects__title {
-  @media (min-width: @breakpoint-xl) {
+  @media (min-width: @breakpoint-lg) {
     width: 33.33%;
   }
 
@@ -43,7 +43,7 @@
     line-height: 2.25rem;
   }
 
-  @media (min-width: @breakpoint-xl) {
+  @media (min-width: @breakpoint-lg) {
     width: 58.33%;
   }
 }
