--- a/src/less/blocks/project-goals-small.less
+++ b/src/less/blocks/project-goals-small.less
@@ -12,14 +12,14 @@
   }
 
   &--text {
-    @media (min-width: @breakpoint-xl) {
+    @media (min-width: @breakpoint-lg) {
       justify-content: space-between;
     }
   }
 }
 
 .project-goals-small__title {
-  @media (min-width: @breakpoint-xl) {
+  @media (min-width: @breakpoint-lg) {
     width: 33.33%;
   }
 
@@ -43,7 +43,7 @@
     line-height: 2.25rem;
   }
 
-  @media (min-width: @breakpoint-xl) {
+  @media (min-width: @breakpoint-lg) {
     width: 58.33%;
   }
 
@@ -53,8 +53,6 @@
 }
 
 .project-goals-small__image {
-  --element-gap-vertical: 16px;
-
   @media (min-width: @breakpoint-xl) {
     width: 50%;
   }
