--- a/src/less/blocks/project-text.less
+++ b/src/less/blocks/project-text.less
@@ -8,14 +8,14 @@
   }
 
   &--text {
-    @media (min-width: @breakpoint-xl) {
+    @media (min-width: @breakpoint-lg) {
       justify-content: space-between;
     }
   }
 }
 
 .project-text__title {
-  @media (min-width: @breakpoint-xl) {
+  @media (min-width: @breakpoint-lg) {
     width: 33.33%;
   }
 
@@ -39,7 +39,7 @@
     line-height: 2.25rem;
   }
 
-  @media (min-width: @breakpoint-xl) {
+  @media (min-width: @breakpoint-lg) {
     width: 58.33%;
   }
 
