--- a/src/less/blocks/works.less
+++ b/src/less/blocks/works.less
@@ -1,18 +1,19 @@
-.works {
-  background-color: #fff;
-}
-
 .works__header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+
+  @media (min-width: @breakpoint-md) {
+    flex-wrap: nowrap;
+  }
 }
 
 .works__title {
   a {
     color: @body-color;
     position: relative;
+    white-space: nowrap;
 
     &::before {
       content: '';
@@ -57,6 +58,10 @@
   overflow: hidden;
   clip-path: inset(0 0 20px 0);
   margin-bottom: -20px;
+
+  @media (min-width: @breakpoint-md) {
+    width: 60%;
+  }
 }
 
 .works__tag {
