--- a/src/less/blocks/drag-text.less
+++ b/src/less/blocks/drag-text.less
@@ -1,7 +1,5 @@
 .drag-text {
-  background-color: #fff;
-
-  @media (max-width: @breakpoint-md - 1px) {
+  @media (max-width: @breakpoint-xl - 1px) {
     padding-top: 16px;
     padding-bottom: 16px;
   }
@@ -17,7 +15,7 @@
   height: 200px;
   width: 100%;
 
-  @media (max-width: @breakpoint-md - 1px) {
+  @media (max-width: @breakpoint-xl - 1px) {
     height: 96px;
   }
 }
@@ -31,12 +29,17 @@
   position: absolute;
   top: 0;
   left: 0;
-  font-size: 14.125rem;
-  line-height: 17rem;
+  font-size: 5rem;
+  line-height: 6rem;
   white-space: nowrap;
 
-  @media (max-width: @breakpoint-md - 1px) {
-    font-size: 5rem;
-    line-height: 6rem;
+  @media (min-width: @breakpoint-md) {
+    font-size: 6rem;
+    line-height: 7rem;
+  }
+
+  @media (min-width: @breakpoint-xl) {
+    font-size: 14.125rem;
+    line-height: 17rem;
   }
 }
