--- a/src/less/blocks/gradient-title.less
+++ b/src/less/blocks/gradient-title.less
@@ -1,14 +1,17 @@
 .gradient-title {
   padding-bottom: 0;
-  background-color: #fff;
   padding-top: ~"calc(var(--header-height) + var(--block-gap-vertical, @{block-gap-vertical}))";
 }
 
 .gradient-title__text {
-  line-height: 8.625rem;
+  line-height: 4.125rem;
 
-  @media (max-width: @breakpoint-md - 1px) {
-    line-height: 4.125rem;
+  @media (min-width: @breakpoint-md) {
+    line-height: 5.125rem;
+  }
+
+  @media (min-width: @breakpoint-xl) {
+    line-height: 8.625rem;
   }
 }
 
