--- a/src/less/blocks/showreel.less
+++ b/src/less/blocks/showreel.less
@@ -35,7 +35,7 @@
       &::before {
         content: 'play';
         font-size: 1.375rem;
-        line-height: 1.625rem;
+        line-height: 1.375rem;
         font-weight: bold;
         text-transform: uppercase;
         font-family: @text-font-family;
@@ -56,7 +56,7 @@
     cursor: none;
   }
 
-  @media (min-width: @breakpoint-lg) {
+  @media (min-width: @breakpoint-xl) {
     .vjs-big-play-button,
     .vjs-control-bar {
       display: none;
@@ -79,7 +79,7 @@
   justify-content: center;
   align-items: center;
 
-  @media (max-width: @breakpoint-lg - 1px) {
+  @media (max-width: @breakpoint-xl - 1px) {
     display: none;
   }
 }
