fix: current edits

--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -65,16 +65,8 @@
     a {
       color: @body-color;
 
-      &:hover {
-        color: #98A5B1;
-      }
-
       .header--dark & {
         color: #fff;
-
-        &:hover {
-          color: #98A5B1;
-        }
       }
     }
   }
@@ -100,6 +92,7 @@
 
     a {
       color: #fff;
+      background-image: none;
     }
 
     &:hover > * {
