--- a/src/less/blocks/clients.less
+++ b/src/less/blocks/clients.less
@@ -1,5 +1,6 @@
 .clients {
   background-color: #d2d6da;
+  overflow: hidden;
 }
 
 .clients__underline {
@@ -25,6 +26,7 @@
 
 .clients__slider {
   padding-bottom: 72px;
+  overflow: visible;
 }
 
 .clients__slide {
@@ -45,7 +47,7 @@
 .clients__scrollbar {
   width: 100% !important;
   left: 0 !important;
-  height: 1px !important;
+  height: 2px !important;
 }
 
 // Card client
@@ -90,13 +92,6 @@
       height: 100%;
       object-fit: cover;
       object-position: center;
-      transition-duration: 0.35s;
-      transition-timing-function: ease-out;
-      transition-property: transform;
-
-      .card-client:hover & {
-        transform: scale(1.1);
-      }
     }
   }
 }
