--- a/src/less/blocks/cources.less
+++ b/src/less/blocks/cources.less
@@ -28,6 +28,7 @@
   a {
     color: @body-color;
     position: relative;
+    background-image: none;
 
     &::before {
       content: '';
@@ -200,6 +201,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.375rem;
+  line-height: 1.375rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: bold;
 
   @media (max-width: @breakpoint-xl - 1px) {
     display: none;
@@ -224,12 +230,15 @@
 }
 
 .cources__play {
+  margin-bottom: -4px;
+
   .cources__container--active & {
     display: none;
   }
 }
 
 .cources__pause {
+  margin-bottom: -4px;
   display: none;
 
   .cources__container--active & {
