fix: current edits

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -10,6 +10,7 @@
 // Blocks
 //------------------------------------------------------------------------------
 
+@import 'blocks/pace';
 @import 'blocks/scene';
 @import 'blocks/grid';
 @import 'blocks/page';
