--- a/src/less/general/styles.less
+++ b/src/less/general/styles.less
@@ -42,7 +42,7 @@ body {
   font-display: swap;
   hanging-punctuation: first allow-end last;
   margin: 0;
-  cursor: url(../../img/cursor-dot.svg) 5 5, auto;
+  cursor: url(img/cursor-dot.svg) 5 5, auto;
 
   @media (max-width: @breakpoint-xl - 1px) {
     font-size: 1.625rem;
@@ -137,7 +137,7 @@ sub {
 }
 
 a {
-  cursor: url(../../img/cursor-rect.svg) 5 5, auto;
+  cursor: url(img/cursor-rect.svg) 5 5, auto;
   color: @link-color;
   background-image: linear-gradient(currentColor, currentColor);
   background-position: 0% 100%;
@@ -168,7 +168,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  cursor: url(../../img/cursor-rect.svg) 5 5, auto;
+  cursor: url(img/cursor-rect.svg) 5 5, auto;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
