fix: current edits

--- a/src/less/blocks/pace.less
+++ b/src/less/blocks/pace.less
@@ -35,7 +35,7 @@
     transform: translate(-50%, -50%);
     width: 422px;
     height: 118px;
-    background-image: url('/img/preload-image.png');
+    background-image: url('img/preload-image.png');
     background-size: 422px 118px;
     background-repeat: no-repeat;
 
