--- a/src/less/general/styles.less
+++ b/src/less/general/styles.less
@@ -42,7 +42,7 @@ body {
   font-display: swap;
   hanging-punctuation: first allow-end last;
   margin: 0;
-  cursor: url(/img/cursor-dot.svg) 5 5, auto;
+  cursor: url(img/cursor-dot.svg) 5 5, auto;
 
   @media (max-width: @breakpoint-xl - 1px) {
     font-size: 1.625rem;
