fix: current edits

--- a/src/less/blocks/works.less
+++ b/src/less/blocks/works.less
@@ -115,7 +115,7 @@
   font-size: 1.125rem;
   line-height: 1.175rem;
   font-weight: 500;
-  cursor: pointer;
+  cursor: url(img/cursor-rect.svg) 5 5, auto;
   transition-duration: 0.3s;
   transition-timing-function: ease-out;
   transition-property: color, border-color;
