--- a/src/less/general/mixins.less
+++ b/src/less/general/mixins.less
@@ -1,13 +1,16 @@
 .btn() {
   font-size: 1.375rem;
-  line-height: 1.5rem;
+  line-height: 1.375rem;
   color: @body-color;
   border: 1px solid @body-color;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   vertical-align: middle;
-  padding: 12px 30px;
+  padding-right: 30px;
+  padding-left: 30px;
+  padding-top: 14px;
+  padding-bottom: 10px;
   border-radius: 25px;
   white-space: nowrap;
   transition-duration: 0.3s;
