fix: current edits

--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -131,6 +131,10 @@
     flex-direction: column;
   }
 
+  @media (min-width: @breakpoint-lg) {
+    flex-wrap: nowrap;
+  }
+
   li {
     border: 0 solid transparent;
     border-right-width: 32px;
