fix: current edits

--- a/src/less/blocks/drag-text.less
+++ b/src/less/blocks/drag-text.less
@@ -43,3 +43,12 @@
     line-height: 17rem;
   }
 }
+
+.drag-text__icon {
+  padding-right: var(--block-gap-horizontal, @block-gap-horizontal);
+  padding-left: var(--block-gap-horizontal, @block-gap-horizontal);
+
+  @media (min-width: @breakpoint-xl) {
+    display: none;
+  }
+}
