--- a/src/less/blocks/work-card.less
+++ b/src/less/blocks/work-card.less
@@ -6,6 +6,7 @@
   height: 330px;
   position: relative;
   overflow: hidden;
+  mask-image: radial-gradient(white, black);
   border-radius: 24px 24px 24px 0px;
   margin-bottom: 24px;
 
