--- a/src/less/blocks/about.less
+++ b/src/less/blocks/about.less
@@ -20,33 +20,17 @@
   a {
     color: @body-color;
     position: relative;
-    background-image: none;
+    background-size: 0% 2px;
+    background-position: 0% 80%;
 
-    &::before {
-      content: '';
-      position: absolute;
-      bottom: 0.15em;
-      left: 0;
-      width: 100%;
-      height: 2px;
-      background-color: @body-color;
-      transition-duration: 0.3s;
-      transition-timing-function: ease-out;
-      transition-property: background-color;
-    }
-
-    &:hover + .icon {
-      opacity: 1;
+    &:hover {
+      background-size: 100% 2px;
     }
   }
 
   .icon {
-    opacity: 0;
     vertical-align: baseline;
     margin-left: 0.4em;
-    transition-duration: 0.35s;
-    transition-timing-function: ease-out;
-    transition-property: opacity;
   }
 
   svg {
