--- a/src/less/blocks/more-projects.less
+++ b/src/less/blocks/more-projects.less
@@ -54,6 +54,14 @@
   display: flex;
   padding: 32px 8px;
   border-bottom: 1px solid #98A5B1;
+  position: relative;
+  transition-duration: 0.35s;
+  transition-timing-function: ease-out;
+  transition-property: color, background-color;
+
+  @media (min-width: @breakpoint-lg) {
+    padding: 32px 24px;
+  }
 
   &:first-child {
     padding: 16px 8px;
@@ -67,6 +75,29 @@
 
   a {
     color: @body-color;
+    background-image: none;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+
+    &:hover {
+      color: #fff;
+    }
+  }
+
+  &:not(:first-child):hover {
+    color: #fff;
+    background-color: @body-color;
+
+    svg {
+      fill: #fff;
+    }
   }
 }
 
