--- a/src/less/blocks/showreel.less
+++ b/src/less/blocks/showreel.less
@@ -17,8 +17,8 @@
   height: 100%;
 
   .vjs-big-play-button {
-    width: 96px;
-    height: 96px;
+    width: 100px;
+    height: 100px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -34,14 +34,14 @@
 
       &::before {
         content: 'play';
-        font-size: 1.375rem;
-        line-height: 1.375rem;
-        font-weight: bold;
+        font-size: 1rem;
+        line-height: 1rem;
         text-transform: uppercase;
         font-family: @text-font-family;
         color: @body-color;
+        letter-spacing: 1px;
         position: absolute;
-        top: 50%;
+        top: 53%;
         left: 50%;
         display: block;
         width: auto;
@@ -68,21 +68,20 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 140px;
-  height: 140px;
-  margin-top: -70px;
-  margin-left: -70px;
+  width: 120px;
+  height: 120px;
+  margin-top: -60px;
+  margin-left: -60px;
   background-color: #fff;
   border-radius: 50%;
   pointer-events: none;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.375rem;
-  line-height: 1.375rem;
+  font-size: 1.125rem;
+  line-height: 1.125rem;
   letter-spacing: 1px;
   text-transform: uppercase;
-  font-weight: bold;
 
   @media (max-width: @breakpoint-xl - 1px) {
     display: none;
